dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mun-app
spec:
  selector:
    matchLabels:
      app: mun-app
  replicas: 1
  template:
    metadata:
      labels:
        app: mun-app
    spec:
      containers:
        - name: mun-app
          resources: {}
          image: ghcr.io/dannil76/municipio-deployment-labs:latest
          ports:
            - containerPort: 80
