dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mun-app-service
spec:
  selector:
    app: mun-app
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 80
