dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mun-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: container.hbgstage.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mun-app-service
                port:
                  number: 8888
